# afioc

./: .gitignore  CMakeLists.txt
boost/: afio
libs/afio/example/: copy_file.cpp  example1.cpp
libs/afio/include/afio/: file_handle.hpp
libs/afio/src/: file_handle.cpp
